# clinical-intelligence-platform

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  SETUP.md
src/cip/: __init__.py  api.py  config.py  db.py  db_init.py  ingest.py  logging_setup.py  pubmed.py  storage.py
tests/: conftest.py  test_api.py  test_ingest.py  test_pubmed.py  test_storage.py
