[project]
name = "clinical-intelligence-platform"
version = "0.1.0"
description = "End-to-end clinical literature ingestion and RAG agent platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Toni" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # ORM + Postgres
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",  # solo para alembic / scripts sync

    # Settings y validación
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # HTTP async
    "httpx>=0.27.0",

    # Object storage (S3 / MinIO)
    "boto3>=1.35.0",

    # Logging estructurado
    "structlog>=24.4.0",

    # CLI
    "typer>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",  # mocks de httpx
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cip"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
